@@ -1,3 +1,11 @@
+TAG: uniprotload-6-0-10-1
+DATE: 08/02/2017
+STAFF: lec 
+CHANGES:
+1) TR12624/handle Ensembl issue in "DR" tag
+see TR for complete details
+#       modified:   bin/UniProtParser.py
+
 TAG: uniprotload-6-0-7-1
 DATE: 01/05/2017
 STAFF: lec 
